// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App app 1`] = `
<div>
  <h1>
    Hello 
    Michael
  </h1>
</div>
`;

exports[`Storyshots Black Diamond Woo hoo 1`] = `
<div>
  <p>
    Woooo BLACK DIAMOND
  </p>
  <strong>
    yep yep
  </strong>
</div>
`;

exports[`Storyshots Wakka wakka 1`] = `
<div>
  <p>
    Wakka flokka in da house
  </p>
  <strong>
    yep yep
  </strong>
  <img
    src="fifa.png"
  />
</div>
`;
